<resources>
    <string name="app_name">SenyumMediaMobile</string>
    <string name="empty"></string>
    <!--Menu Navigation-->
    <string name="stationery">Stationery</string>
    <string name="perlengkapan_kantor">Perlengkapan Kantor</string>
    <string name="peralatan_kantor">Peralatan Kantor</string>
    <string name="kertas">Kertas</string>
    <string name="elektronik">Elektronik</string>
    <string name="for_kids">Creativy For Kids</string>

    <!--Sub Menu Navigation-->

    <!--Navigation Function to Open or Close-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu">Menu</string>

    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
</resources>
